@@ -2,7 +2,7 @@
  * Copyright (c) 1998-2004, Index Data
  * See the file LICENSE for details.
  *
- * $Id: proto.h,v 1.12 2004-01-12 12:11:57 adam Exp $
+ * $Id: proto.h,v 1.13 2004-01-15 10:16:26 adam Exp $
  */
 #ifndef Z_PROTO_H
 #define Z_PROTO_H
@@ -116,7 +116,9 @@ YAZ_EXPORT void yaz_display_OPAC(WRBUF wrbuf, Z_OPACRecord *r, int flags);
 YAZ_EXPORT int yaz_init_opt_encode(Z_Options *opt, const char *opt_str,
 				   int *error_pos);
 YAZ_EXPORT void yaz_init_opt_decode(Z_Options *opt,
-				    void (*pr)(const char *name));
+				    void (*pr)(const char *name,
+					       void *clientData),
+				    void *clientData);
 YAZ_END_CDECL
 
 #include <yaz/prt-ext.h>
